[WIP] Working on testing configuration

--- a/Mini-Project/src/openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3/config/turtlebot3_world.yaml
+++ b/Mini-Project/src/openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3/config/turtlebot3_world.yaml
@@ -38,3 +38,6 @@ turtlebot3: #namespace
     terminal_timeout_rwd: -10.0
 
     time_rwd : -0.05 # Penalità temporale costante per ogni step
+
+    # Training/Testing Phase
+    mode: "train" # "train" o "test"
