Added test mazes

--- a/Mini-Project/src/openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3/config/turtlebot3_world.yaml
+++ b/Mini-Project/src/openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3/config/turtlebot3_world.yaml
@@ -21,7 +21,7 @@ turtlebot3: #namespace
     turn_reward: 1 # Points Given to turn as action
     end_episode_points: 200 # Points given when ending an episode
 
-    max_goal_distance: 4.0
+    max_goal_distance: 20
     easy_goal_thold: 0.75 #75%
     
     # New parameters for goal sampling
@@ -40,4 +40,5 @@ turtlebot3: #namespace
     time_rwd : -0.05 # Penalità temporale costante per ogni step
 
     # Training/Testing Phase
-    mode: "train" # "train" o "test"
+    mode: "train" # "train" or "test"
+    test_maze: "standard" # "standard", "opposite" or "hard"
